syntax = "proto3";

option go_package = "./;protobuf";
package protobuf;

message RequestContactVerification {
  uint64 clock = 1;
  string challenge = 3;
}

message AcceptContactVerification {
  uint64 clock = 1;
  string response = 3;
}

message ContactVerificationTrusted {
  uint64 clock = 1;
}

message DeclineContactVerification {
  uint64 clock = 1;
}
